code refactor : initial modal working of create nodes and relationships

--- a/src/app/modules/visualizer/components/vis-graph/vis-graph.component.html
+++ b/src/app/modules/visualizer/components/vis-graph/vis-graph.component.html
@@ -1,3 +1,9 @@
-<p>
-  vis-graph works!
-</p>
+<visualizer-toolbar></visualizer-toolbar>
+<div class="graph-container" id="graphViewer">
+</div>
+<!-- <ng-template *ngIf="showlimiterror" let-popup #popupTemplate>
+  <div class="header">Rating</div>
+  <div class="content">
+      <sui-rating class="star" (click)="popup.close()"></sui-rating>
+  </div>
+</ng-template> -->
