--- a/src/app/modules/visualizer/components/toolbar/toolbar.component.scss
+++ b/src/app/modules/visualizer/components/toolbar/toolbar.component.scss
@@ -1,10 +1,3 @@
-.graph-container {
-    background: #F5F5F5;
-    height: 80vh;
-    width: 80%;
-    float: right;
-}
-
 .selected-count {
     background: #F5F5F5;
     word-break: break-all;
@@ -13,13 +6,14 @@
     font-size: 16px;
     color: #30333a;
     border-radius: 3px;
-    padding: 1em;
+    padding: 1.35em;
     float: left;
 }
 
 .wrapper-countlimit {
     width: 80%;
     float: right;
+    background: #f5f5f5;
 }
 
 .nodeLimit {
@@ -28,15 +22,16 @@
     float: left;
     border-radius: 3px;
     padding: 1em;
-    background: #F5F5F5;
     outline: none;
+    background: inherit;
 }
 
 .creationToolbar {
     top: 50px;
     float: left;
-    padding: 1em;
+    padding: 0.85em;
     outline: none;
+    background: inherit;
 }
 
 .nodeLimit input {
@@ -56,7 +51,6 @@
 }
 
 @media screen and (max-width: '1100px') {
-    .graph-container,
     .selected-count {
         width: 75%;
     }
