sidebar node filter works

--- a/src/app/modules/dashboard/components/main/main.component.html
+++ b/src/app/modules/dashboard/components/main/main.component.html
@@ -1,3 +1,3 @@
 <dashboard-header></dashboard-header>
-<dashboard-sidebar></dashboard-sidebar>
-<visualizer-vis-graph></visualizer-vis-graph>
+<dashboard-sidebar (sidebarBtnClicked)="sidebarEventFetch($event)"></dashboard-sidebar>
+<visualizer-vis-graph [sidebarBtnClicked]="sidebarEvent"></visualizer-vis-graph>
