sidebar relation node reset apply done

--- a/src/app/modules/dashboard/components/sidebar/realtionship-filter/realtionship-filter.component.html
+++ b/src/app/modules/dashboard/components/sidebar/realtionship-filter/realtionship-filter.component.html
@@ -1,9 +1,11 @@
-<sui-multi-select [(ngModel)]="selectedRelation" [options]="relationOptions" [maxSelected]="15" #relation>
-    <div class="ui icon search input">
-        <i class="search icon"></i>
-        <input suiSelectSearch type="text" placeholder="Search Relationships...">
-    </div>
-    <div class="scrolling menu">
-        <sui-select-option *ngFor="let o of relation.filteredOptions" [value]="o"></sui-select-option>
-    </div>
-</sui-multi-select>
+<div class="item">
+    <sui-multi-select [(ngModel)]="selectedRelation" [options]="relationOptions" (ngModelChange)="emitSelectedData()" [maxSelected]="15" #relation>
+        <div class="ui icon search input">
+            <i class="search icon"></i>
+            <input suiSelectSearch type="text" placeholder="Search Relationships...">
+        </div>
+        <div class="scrolling menu">
+            <sui-select-option *ngFor="let o of relation.filteredOptions" [value]="o"></sui-select-option>
+        </div>
+    </sui-multi-select>
+</div>
