--- a/src/app/modules/dashboard/components/sidebar/sidebar/sidebar.component.html
+++ b/src/app/modules/dashboard/components/sidebar/sidebar/sidebar.component.html
@@ -3,29 +3,20 @@
         <div class="sidebarBodyTitle">
             <p>Filter By Attributes</p>
         </div>
-        <dashboard-node-filter (selectedData)="setSelectedData($event)"></dashboard-node-filter>
+        <dashboard-node-filter (selectedData)="setSelectedData($event)" [resetObj]="resetObj"></dashboard-node-filter>
         <div class="btn-container d-flex justify-content-around">
-            <shared-gray-button [btnText]="btnTextReset" (clicked)="resetGraph($event)"></shared-gray-button>
-            <shared-gray-button [btnText]="btnTextApply" (clicked)="searchGraph($event)"></shared-gray-button>
+            <shared-gray-button [btnText]="BUTTON_TEXT_RESET" (clicked)="resetGraph($event)"></shared-gray-button>
+            <shared-gray-button [btnText]="BUTTON_TEXT_APPLY" (clicked)="searchGraph($event)"></shared-gray-button>
         </div>
         <div class="sidebarBodyTitle">
             <p>Filter By Relationships</p>
         </div>
         <div class="sidebarElements">
             <div class="item">
-                <dashboard-realtionship-filter></dashboard-realtionship-filter>
-                <!-- <div class="btn-container d-flex justify-content-around">
-            <div class="searchBtnWrapper btn-sidebar">
-                <button class="btn btn-default btn-md searchBtn" (click)="resetGraph()">Reset</button>
-            </div>
-            <div class="searchBtnWrapper btn-sidebar">
-                <button class="btn btn-default btn-md searchBtn" (click)="relationSearchGraph()">Apply</button>
-            </div>
-
-        </div> -->
+                <dashboard-realtionship-filter (selectedData)="setSelectedRelData($event)" [resetObj]="resetObj"></dashboard-realtionship-filter>
                 <div class="btn-container d-flex justify-content-around">
-                    <shared-gray-button [btnText]="btnTextReset" (clicked)="resetGraph($event)"></shared-gray-button>
-                    <shared-gray-button [btnText]="btnTextApply" (clicked)="searchGraph($event,'relation')"></shared-gray-button>
+                    <shared-gray-button [btnText]="BUTTON_TEXT_RESET" (clicked)="resetGraph($event)"></shared-gray-button>
+                    <shared-gray-button [btnText]="BUTTON_TEXT_APPLY" (clicked)="searchGraph($event,'relation')"></shared-gray-button>
                 </div>
                 <div class="btn-container d-flex justify-content-around">
                     <span>Show deleted data</span>
