--- a/src/app/modules/dashboard/components/sidebar/node-filter/node-filter.component.html
+++ b/src/app/modules/dashboard/components/sidebar/node-filter/node-filter.component.html
@@ -2,7 +2,7 @@
     <div class="item-container">
         <div class="item" *ngFor="let attributeOptions of totalAtrributeOptions; let i = index">
             <div *ngIf="attributeOptions">
-                <shared-custom-semantic-dropdown [attributeOptions]="attributeOptions" (selectedKeys)="prepareSelectedDropdown($event)"></shared-custom-semantic-dropdown>
+                <shared-custom-semantic-dropdown [attributeOptions]="attributeOptions" (selectedKeys)="prepareSelectedDropdown($event)" [resetObj]="resetObj"></shared-custom-semantic-dropdown>
             </div>
         </div>
     </div>
