color panel added

--- a/src/app/modules/visualizer/components/vis-graph/vis-graph.component.html
+++ b/src/app/modules/visualizer/components/vis-graph/vis-graph.component.html
@@ -1,3 +1,4 @@
+<visualizer-color-panel *ngIf="!loader"></visualizer-color-panel>
 <visualizer-toolbar [editData]="editNodeData" [editRelData]="editRelationData"></visualizer-toolbar>
 <div class="graph-container" id="graphViewer">
 </div>
