refactor : element found text done

--- a/src/app/modules/visualizer/components/vis-graph/vis-graph.component.html
+++ b/src/app/modules/visualizer/components/vis-graph/vis-graph.component.html
@@ -1,5 +1,5 @@
 <visualizer-color-panel *ngIf="!loader"></visualizer-color-panel>
-<visualizer-toolbar [editData]="editNodeData" [editRelData]="editRelationData"></visualizer-toolbar>
+<visualizer-toolbar [editData]="editNodeData" [editRelData]="editRelationData" [selectedCount]="selectedCount"></visualizer-toolbar>
 <div class="graph-container" id="graphViewer">
 </div>
 
