--- a/src/app/modules/visualizer/components/toolbar/toolbar.component.html
+++ b/src/app/modules/visualizer/components/toolbar/toolbar.component.html
@@ -2,7 +2,7 @@
     <div class="selected-count">{{selectedCount}} Elements Found</div>
     <div class="nodeLimit">
         <p class="nodelimit-head">Element Limit :</p>
-        <input type="text" [(ngModel)]=nodeLimit (ngModelChange)="limitChange(nodeLimit, popup)" suiPopup popupText="{{errorMessage}}" popupTrigger="manual" #popup="suiPopup" (keyup)="sendLimit($event, nodeLimit)">
+        <input type="text" [(ngModel)]="nodeLimit" (ngModelChange)="limitChange(nodeLimit, popup)" suiPopup popupText="{{errorMessage}}" popupTrigger="manual" #popup="suiPopup" (keyup)="sendLimit($event, nodeLimit)">
     </div>
     <div class="creationToolbar">
         <visualizer-create-nodes></visualizer-create-nodes>
