--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,26 +1,20 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
 // Plus imports for other components in your app.
-
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
 @include mat-core();
-
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $network-visualizer-primary: mat-palette($mat-indigo);
 $network-visualizer-accent: mat-palette($mat-pink, A200, A100, A400);
-
 // The warn palette is optional (defaults to red).
 $network-visualizer-warn: mat-palette($mat-red);
-
 // Create the theme object (a Sass map containing all of the palettes).
 $network-visualizer-theme: mat-light-theme($network-visualizer-primary, $network-visualizer-accent, $network-visualizer-warn);
-
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
@@ -28,5 +22,48 @@ $network-visualizer-theme: mat-light-theme($network-visualizer-primary, $network
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.toast-success {
+    @extend .toast;
+    background-color: #51A351;
+}
+
+.toast-error {
+    @extend .toast;
+    background-color: #BD362F;
+}
+
+.toast-info {
+    @extend .toast;
+    background-color: #2F96B4;
+}
+
+.toast-warning {
+    @extend .toast;
+    background-color: #F89406;
+}
+
+.toast {
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    overflow: hidden;
+    margin: 0 0 6px;
+    padding: 15px 15px 15px 50px;
+    width: 300px;
+    border-radius: 3px 3px 3px 3px;
+    background-position: 15px center;
+    background-repeat: no-repeat;
+    background-size: 24px;
+    box-shadow: 0 0 12px #999999;
+    color: #FFFFFF;
+}
