--- a/src/app/modules/visualizer/components/create-nodes/modals/create-edit-relation-modals/create-edit-relation-modals.component.html
+++ b/src/app/modules/visualizer/components/create-nodes/modals/create-edit-relation-modals/create-edit-relation-modals.component.html
@@ -12,7 +12,7 @@
           </div>
           <div class="modal-footer">
               <button type="button" class="btn ui-button-text later" data-dismiss="modal">Maybe Later</button>
-              <button type="button" class="btn btn-danger" (click)="submitDelete(deleteContext)" id="del_btn">Close</button>
+              <button type="button" class="btn btn-primary create" (click)="submitModal()">Create</button>              
           </div>
       </div>
   </div>
